# Cullendula

./: .clang-format  .gitignore  CMakeLists.txt  Cullendula.pro  Cullendula.vcxproj  CullendulaFileSystemHandler.cpp  CullendulaFileSystemHandler.h  CullendulaMainWindow.cpp  CullendulaMainWindow.h  CullendulaMainWindow.ui  CullendulaUndoStack.cpp  CullendulaUndoStack.h  Cullendula_forVisualStudioConvert.pro  Doxyfile.in  README.md  Test_CullendulaUndoStack.cpp  Test_CullendulaUndoStack.h  cullendula.rc  localPipeline.sh  main.cpp  worst_findings.md
Cullendula/: CullendulaMainWindow.cpp  CullendulaMainWindow.h  CullendulaMainWindow.ui  main.cpp
cmake/: GenerateCoverage.cmake
scripts/: run_cppcheck.sh
src/: CMakeLists.txt  CullendulaAppBootstrap.cpp  CullendulaAppBootstrap.h  CullendulaFileSystemHandler.cpp  CullendulaFileSystemHandler.h  CullendulaMainWindow.cpp  CullendulaMainWindow.h  CullendulaMainWindow.ui  CullendulaUndoStack.cpp  CullendulaUndoStack.h  Test_CullendulaUndoStack.cpp  main.cpp  resources.qrc  src.pro
tests/: CMakeLists.txt  Test_CullendulaAppBootstrap.cpp  Test_CullendulaAppBootstrap.h  Test_CullendulaFileSystemHandler.cpp  Test_CullendulaFileSystemHandler.h  Test_CullendulaMainWindow.cpp  Test_CullendulaMainWindow.h  Test_CullendulaUndoStack.cpp  Test_CullendulaUndoStack.h  main.cpp  tests.pro
translations/: Cullendula_de.ts  Cullendula_hr.ts  Cullendula_zh_CN.ts
